Up contact info and links

--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
 			<section id="header">
 				<header>
 					<span class="image avatar"><img src="images/my_imgs/Profile.png" alt="" /></span>
-					<h1 id="logo"><a href="#">Ted Lim</a></h1>
-					<p> This is where I tell the professional world <br />
+					<h1 id="logo">Ted Lim</h1>
+					<p> Where I tell the professional world <br />
 					what I am up to.</p>
 				</header>
 				<nav id="nav">
@@ -21,12 +21,12 @@
 						<li><a href="#one" class="active">This Is Me</a></li>
 						<li><a href="#two">Things I Got Paid For</a></li>
 						<li><a href="#three">Things I Did For Fun</a></li>
-						<li><a href="#four">Contact Me</a></li>
 					</ul>
 				</nav>
 				<footer>
+					<h1>Contact Me</h1>
 					<ul class="icons fa-fw">
-						<li><a class="icon fa-envelope">tedlim@alumni.stanford.edu</a></li>
+						<li><a href="mailto:tedlim@alumni.stanford.edu?Subject=Hello" target="_top" class="icon fa-envelope">tedlim@alumni.stanford.edu</a></li>
 						<li><a href="https://www.linkedin.com/in/tedglim/" class="icon fa-linkedin">www.linkedin.com/in/tedglim/</a></li>
 						<li><a class="icon fa-phone">650‑862‑9729</a></li>
 					</ul>
@@ -99,7 +99,7 @@
 											</div>
 										</article>
 										<article>
-											<a href="https://github.com/demastte?tab=repositories" class="image"><img src="images/GitHub_Logo.png" alt="" /></a>
+											<a href="https://github.com/tedglim?tab=repositories" class="image"><img src="images/GitHub_Logo.png" alt="" /></a>
 											<div class="inner">
 												<h4>Spreadsheets and More</h4>
 												<p>A collection of game design-related spreadsheets and other works in-progress</p>
