--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
 											<a href="https://github.com/tedglim?tab=repositories" class="image"><img src="images/GitHub_Logo.png" alt="" /></a>
 											<div class="inner">
 												<h4>Spreadsheets and More</h4>
-												<p>A collection of game design-related spreadsheets and other works in-progress</p>
+												<p>A collection of game design-related spreadsheets and other in-progress works.</p>
 											</div>
 										</article>
 									</div>
