--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
 				<nav id="nav">
 					<ul>
 						<li><a href="#one" class="active">This Is Me</a></li>
-						<li><a href="#two">Things I Got Paid For</a></li>
-						<li><a href="#three">Things I Did For Fun</a></li>
+						<li><a href="#two">Things I Did For Fun</a></li>
+						<li><a href="#three">Things I Got Paid For</a></li>
 					</ul>
 				</nav>
 				<footer>
@@ -58,29 +58,6 @@
 						<!-- Two -->
 							<section id="two">
 								<div class="container">
-									<h3>Things I Got Paid For</h3>
-									<div class="features">
-										<article>
-											<a href="https://netease-na.com/" type="image/png" class="image"><img src="images/NetEase.png" alt="" /></a>
-											<div class="inner">
-												<h4>Associate Game Designer</h4>
-												<p>I created a game economy system, designed retention systems and drafted level concepts for new game modes.</p>
-											</div>
-										</article>
-										<article>
-											<a href="https://www.acmeticketing.com/" class="image"><img src="images/ACME.png" alt="" /></a>
-											<div class="inner">
-												<h4>Software Engineer Intern</h4>
-												<p>I created purchase flows for the Vantiv Element payment processor, built a PCI-compliant manual credit card entry payment and developed a productive in-house command line tool.</p>
-											</div>
-										</article>
-									</div>
-								</div>
-							</section>
-
-						<!-- Three -->
-							<section id="three">
-								<div class="container">
 									<h3>Things I Did For Fun</h3>
 									<p>These are some projects that I've been pursuing to continue developing my skillset. Check them out!</p>
 									<div class="features">
@@ -108,6 +85,29 @@
 									</div>
 								</div>
 							</section>
+
+						<!-- Three -->
+							<section id="three">
+								<div class="container">
+									<h3>Things I Got Paid For</h3>
+									<div class="features">
+										<article>
+											<a href="https://netease-na.com/" type="image/png" class="image"><img src="images/NetEase.png" alt="" /></a>
+											<div class="inner">
+												<h4>Associate Game Designer</h4>
+												<p>I created a game economy system, designed retention systems and drafted level concepts for new game modes.</p>
+											</div>
+										</article>
+										<article>
+											<a href="https://www.acmeticketing.com/" class="image"><img src="images/ACME.png" alt="" /></a>
+											<div class="inner">
+												<h4>Software Engineer Intern</h4>
+												<p>I created purchase flows for the Vantiv Element payment processor, built a PCI-compliant manual credit card entry payment and developed a productive in-house command line tool.</p>
+											</div>
+										</article>
+									</div>
+								</div>
+							</section>						
 					</div>
 
 				<!-- Footer -->
