Added Cookie Jam Blast Teardown
title

--- a/index.html
+++ b/index.html
@@ -62,6 +62,13 @@
 									<p>These are some projects that I've been pursuing to continue developing my skillset. Check them out!</p>
 									<div class="features">
 										<article>
+											<a href="documents/Cookie_Jam_Blast.pdf" type="application/pdf" class="image"><img src="images/Cookie_Jam_Blast.png" alt="" /></a>
+											<div class="inner">
+												<h4>Cookie Jam Blast Teardown</h4>
+												<p>Learnings from a Match 3 game</p>
+											</div>
+										</article>
+										<article>
 											<a href="documents/Langrisser.pdf" type="application/pdf" class="image"><img src="images/Langrisser.png" alt="" /></a>
 											<div class="inner">
 												<h4>Langrisser Mobile Teardown</h4>
