updated website text

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 				<nav id="nav">
 					<ul>
 						<li><a href="#one" class="active">This Is Me</a></li>
-						<li><a href="#two">Things I Did For Fun</a></li>
+						<li><a href="#two">Things I Do For Fun</a></li>
 						<li><a href="#three">Things I Got Paid For</a></li>
 					</ul>
 				</nav>
@@ -50,7 +50,7 @@
 										Ideate. Create. Iterate.</p>
 									</header>
 									<p>Joy. Laughter. Competition. Fun. </br>
-										We can experience all of this and more through gaming. My goal is to create memorable experiences for people to enjoy and share with others through games. </p>
+										My goal is to create memorable experiences for people to enjoy and share with others through games. </p>
 								</div>
 							</section>
 
@@ -84,8 +84,8 @@
 										<article>
 											<a href="https://github.com/tedglim?tab=repositories" class="image"><img src="images/GitHub_Logo.png" alt="" /></a>
 											<div class="inner">
-												<h4>Spreadsheets and More</h4>
-												<p>A collection of game design-related spreadsheets and other in-progress works.</p>
+												<h4>Spreadsheets, Unity Prototypes and More</h4>
+												<p>A collection of game-related spreadsheets, Unity game prototypes and other works.</p>
 											</div>
 										</article>
 									</div>
