change github link

--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
 											</div>
 										</article>
 										<article>
-											<a href="https://github.com/tedglim?tab=repositories" class="image"><img src="images/GitHub_Logo.png" alt="" /></a>
+											<a href="https://github.com/tedglim" class="image"><img src="images/GitHub_Logo.png" alt="" /></a>
 											<div class="inner">
 												<h4>Spreadsheets, Unity Prototypes and More</h4>
 												<p>A collection of game-related spreadsheets, Unity game prototypes and other works.</p>
