--- a/index.html
+++ b/index.html
@@ -13,14 +13,14 @@
 				<header>
 					<span class="image avatar"><img src="images/my_imgs/Profile.png" alt="" /></span>
 					<h1 id="logo">Ted Lim</h1>
-					<p> Where I tell the professional world <br />
-					what I am up to.</p>
+					<p> Where I tell people what I've been up to.</p>
 				</header>
 				<nav id="nav">
 					<ul>
-						<li><a href="#one" class="active">This Is Me</a></li>
-						<li><a href="#two">Things I Do For Fun</a></li>
-						<li><a href="#three">Things I Got Paid For</a></li>
+						<li><a href="#one" class="active">Me</a></li>
+						<li><a href="#two">Game Breakdowns</a></li>
+						<li><a href="#three">Game Prototypes</a></li>
+						<li><a href="#three">Game Spreadsheets</a></li>
 					</ul>
 				</nav>
 				<footer>
@@ -46,19 +46,17 @@
 								<div class="container">
 									<header class="major">
 										<h2>Ted Lim</h2>
-										<p>Game Designer<br />
-										Ideate. Create. Iterate.</p>
+										<p>Game Designer</p>
 									</header>
-									<p>Joy. Laughter. Competition. Fun. </br>
-										My goal is to create memorable experiences for people to enjoy and share with others through games. </p>
+									<p>My goal is to create memorable experiences for people to enjoy and share with others through games. </p>
 								</div>
 							</section>
 
 						<!-- Two -->
 							<section id="two">
 								<div class="container">
-									<h3>Things I Did For Fun</h3>
-									<p>These are some projects that I've been pursuing to continue developing my skillset. Check them out!</p>
+									<h3>Game Teardowns</h3>
+									<p>These are product teardowns of various mobile games with my insights and analyses on their strengths and weaknesses.</p>
 									<div class="features">
 										<article>
 											<a href="documents/Cookie_Jam_Blast.pdf" type="application/pdf" class="image"><img src="images/Cookie_Jam_Blast.png" alt="" /></a>
@@ -81,13 +79,6 @@
 												<p>Looking at how Golf Clash adopts the Clash Royale F2P model to meet its own needs.</p>
 											</div>
 										</article>
-										<article>
-											<a href="https://github.com/tedglim" class="image"><img src="images/GitHub_Logo.png" alt="" /></a>
-											<div class="inner">
-												<h4>Spreadsheets, Unity Prototypes and More</h4>
-												<p>A collection of game-related spreadsheets, Unity game prototypes and other works.</p>
-											</div>
-										</article>
 									</div>
 								</div>
 							</section>
@@ -95,8 +86,20 @@
 						<!-- Three -->
 							<section id="three">
 								<div class="container">
-									<h3>Things I Got Paid For</h3>
+									<h3>Game Prototypes</h3>
 									<div class="features">
+										<article>
+											<a href="https://simmer.io/@demastte/all-clear" class="image"><img src="gifs/Match3Demo.gif" alt="" /></a>
+											<h4>All-Clear</h4>
+											<p>A puzzle game inspired by Puzzle & Dragon's Match 3 mechanics</p>
+										</article>
+										<article>
+											<a href="https://github.com/tedglim" class="image"><img src="images/GitHub_Logo.png" alt="" /></a>
+											<div class="inner">
+												<h4>Spreadsheets, Unity Prototypes and More</h4>
+												<p>A collection of game-related spreadsheets, Unity game prototypes and other works.</p>
+											</div>
+										</article>
 										<article>
 											<a href="https://netease-na.com/" type="image/png" class="image"><img src="images/NetEase.png" alt="" /></a>
 											<div class="inner">
