edited Game section

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 				</header>
 				<nav id="nav">
 					<ul>
-						<li><a href="#one" class="active">Me</a></li>
+						<li><a href="#Me" class="active">Me</a></li>
 						<li><a href="#two">Game Breakdowns</a></li>
 						<li><a href="#three">Game Prototypes</a></li>
 						<li><a href="#three">Game Spreadsheets</a></li>
@@ -39,7 +39,7 @@
 					<div id="main">
 
 						<!-- One -->
-							<section id="one">
+							<section id="Me">
 								<div class="image main" data-position="center">
 									<img src="images/my_imgs/Hallway_Resize.png" alt="" />
 								</div>
@@ -89,9 +89,14 @@
 									<h3>Game Prototypes</h3>
 									<div class="features">
 										<article>
-											<a href="https://simmer.io/@demastte/all-clear" class="image"><img src="gifs/Match3Demo.gif" alt="" /></a>
 											<h4>All-Clear</h4>
+											<a href="https://simmer.io/@demastte/all-clear" class="image"><img src="gifs/Match3Demo.gif" alt="" /></a>
 											<p>A puzzle game inspired by Puzzle & Dragon's Match 3 mechanics</p>
+										</article>
+										<article>
+											<h4>Clear and Shoot</h4>
+											<a href="https://simmer.io/@demastte/clear-and-shoot" class="image"><img src="gifs/ChronoSlash.gif" alt="" /></a>
+											<p>A 2D action-survival platformer where your goal is to earn points by collecting the gems that are dropped defeated enemies.</p>
 										</article>
 										<article>
 											<a href="https://github.com/tedglim" class="image"><img src="images/GitHub_Logo.png" alt="" /></a>
