Update website with more direct links to projects.

--- a/index.html
+++ b/index.html
@@ -18,9 +18,10 @@
 				<nav id="nav">
 					<ul>
 						<li><a href="#Me" class="active">Me</a></li>
-						<li><a href="#two">Game Breakdowns</a></li>
-						<li><a href="#three">Game Prototypes</a></li>
-						<li><a href="#three">Game Spreadsheets</a></li>
+						<li><a href="#Breakdowns">Game Breakdowns</a></li>
+						<li><a href="#Prototypes">Game Prototypes</a></li>
+						<li><a href="#Spreadsheets">Game Spreadsheets</a></li>
+						<li><a href="#Jobs">Jobs</a></li>
 					</ul>
 				</nav>
 				<footer>
@@ -38,7 +39,7 @@
 				<!-- Main -->
 					<div id="main">
 
-						<!-- One -->
+						<!-- Me -->
 							<section id="Me">
 								<div class="image main" data-position="center">
 									<img src="images/my_imgs/Hallway_Resize.png" alt="" />
@@ -52,8 +53,8 @@
 								</div>
 							</section>
 
-						<!-- Two -->
-							<section id="two">
+						<!-- Breakdowns -->
+							<section id="Breakdowns">
 								<div class="container">
 									<h3>Game Teardowns</h3>
 									<p>These are product teardowns of various mobile games with my insights and analyses on their strengths and weaknesses.</p>
@@ -83,33 +84,56 @@
 								</div>
 							</section>
 
-						<!-- Three -->
-							<section id="three">
+						<!-- Prototypes -->
+							<section id="Prototypes">
 								<div class="container">
 									<h3>Game Prototypes</h3>
 									<div class="features">
 										<article>
 											<h4>All-Clear</h4>
-											<a href="https://simmer.io/@demastte/all-clear" class="image"><img src="gifs/Match3Demo.gif" alt="" /></a>
-											<p>A puzzle game inspired by Puzzle & Dragon's Match 3 mechanics</p>
+											<a href="https://simmer.io/@demastte/all-clear" class="image"><img src="gifs/Match3Demo.gif" alt="" /></a></br>
+											<p>A 2D puzzle game inspired by Puzzle & Dragon's Match 3 mechanics. The goal is to clear as many dots as you can.</p>
 										</article>
 										<article>
-											<h4>Clear and Shoot</h4>
-											<a href="https://simmer.io/@demastte/clear-and-shoot" class="image"><img src="gifs/ChronoSlash.gif" alt="" /></a>
-											<p>A 2D action-survival platformer where your goal is to earn points by collecting the gems that are dropped defeated enemies.</p>
+											<h4>Shoot and Clear</h4>
+											<a href="https://simmer.io/@demastte/clear-and-shoot" class="image"><img src="gifs/ChronoSlash.gif" alt="" /></a></br>
+											<p>A 2D action-survival platformer where your goal is to earn points by collecting the gems that are dropped by defeated enemies.</p>
 										</article>
 										<article>
-											<a href="https://github.com/tedglim" class="image"><img src="images/GitHub_Logo.png" alt="" /></a>
+											<h4>Graybox Rush</h4>
+											<a href="https://simmer.io/@demastte/graybox-rush" class="image"><img src="gifs/EndlessRunner.gif" alt="" /></a></br>
+											<p>A 2D endless runner where you collect coins to earn points and aim for a high score.</p>
+										</article>
+									</div>
+								</div>
+							</section>
+							
+						<!-- Spreadsheets -->
+							<section id="Spreadsheets">
+								<div class="container">
+									<h3>Game Spreadsheets</h3>
+									<div class="features">
+										<article>
+											<a href="https://github.com/tedglim/gaming_spreadsheets" class="image"><img src="images/GitHub_Logo.png" alt="" /></a>
 											<div class="inner">
-												<h4>Spreadsheets, Unity Prototypes and More</h4>
-												<p>A collection of game-related spreadsheets, Unity game prototypes and other works.</p>
+												<h4>Spreadsheet Repo</h4>
+												<p>A collection of spreadsheets that outline a variety of foundational game systems.</p>
 											</div>
 										</article>
+									</div>
+								</div>
+							</section>
+
+						<!-- Jobs -->
+							<section id="Jobs">
+								<div class="container">
+									<h3>Jobs</h3>
+									<div class="features">
 										<article>
 											<a href="https://netease-na.com/" type="image/png" class="image"><img src="images/NetEase.png" alt="" /></a>
 											<div class="inner">
 												<h4>Associate Game Designer</h4>
-												<p>I created a game economy system, designed retention systems and drafted level concepts for new game modes.</p>
+												<p>I created a game economy system, designed retention mechanics and drafted level concepts for new game modes.</p>
 											</div>
 										</article>
 										<article>
@@ -132,7 +156,6 @@
 							</ul>
 						</div>
 					</section>
-
 			</div>
 
 		<!-- Scripts -->
