--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 							<section id="Breakdowns">
 								<div class="container">
 									<h3>Game Teardowns</h3>
-									<p>These are product teardowns of various mobile games with my insights and analyses on their strengths and weaknesses.</p>
+									<p>These are product teardowns of various mobile games highlighting their strengths and weaknesses.</p>
 									<div class="features">
 										<article>
 											<a href="documents/Cookie_Jam_Blast.pdf" type="application/pdf" class="image"><img src="images/Cookie_Jam_Blast.png" alt="" /></a>
@@ -91,17 +91,20 @@
 									<div class="features">
 										<article>
 											<h4>All-Clear</h4>
-											<a href="https://simmer.io/@demastte/all-clear" class="image"><img src="gifs/Match3Demo.gif" alt="" /></a></br>
+											<a href="https://simmer.io/@demastte/all-clear" class="image"><img src="gifs/Match3Demo.gif" alt="" /></a>
+											<br class=”blank” />
 											<p>A 2D puzzle game inspired by Puzzle & Dragon's Match 3 mechanics. The goal is to clear as many dots as you can.</p>
 										</article>
 										<article>
 											<h4>Shoot and Clear</h4>
-											<a href="https://simmer.io/@demastte/clear-and-shoot" class="image"><img src="gifs/ChronoSlash.gif" alt="" /></a></br>
-											<p>A 2D action-survival platformer where your goal is to earn points by collecting the gems that are dropped by defeated enemies.</p>
+											<a href="https://simmer.io/@demastte/clear-and-shoot" class="image"><img src="gifs/ChronoSlash.gif" alt="" /></a>
+											<br class=”blank” />
+											<p>A 2D action-survival platformer where your goal is to earn points by collecting gems that are dropped by defeated enemies.</p>
 										</article>
 										<article>
 											<h4>Graybox Rush</h4>
-											<a href="https://simmer.io/@demastte/graybox-rush" class="image"><img src="gifs/EndlessRunner.gif" alt="" /></a></br>
+											<a href="https://simmer.io/@demastte/graybox-rush" class="image"><img src="gifs/EndlessRunner.gif" alt="" /></a>
+											<br class=”blank” />
 											<p>A 2D endless runner where you collect coins to earn points and aim for a high score.</p>
 										</article>
 									</div>
@@ -116,7 +119,7 @@
 										<article>
 											<a href="https://github.com/tedglim/gaming_spreadsheets" class="image"><img src="images/GitHub_Logo.png" alt="" /></a>
 											<div class="inner">
-												<h4>Spreadsheet Repo</h4>
+												<h4>Spreadsheet Repository</h4>
 												<p>A collection of spreadsheets that outline a variety of foundational game systems.</p>
 											</div>
 										</article>
