--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 				<nav id="nav">
 					<ul>
 						<li><a href="#Me" class="active">Me</a></li>
-						<li><a href="#Breakdowns">Game Breakdowns</a></li>
+						<li><a href="#Breakdowns">Game Teardowns</a></li>
 						<li><a href="#Prototypes">Game Prototypes</a></li>
 						<li><a href="#Spreadsheets">Game Spreadsheets</a></li>
 						<li><a href="#Jobs">Jobs</a></li>
