--- a/index.html
+++ b/index.html
@@ -92,19 +92,19 @@
 										<article>
 											<h4>All-Clear</h4>
 											<a href="https://simmer.io/@demastte/all-clear" class="image"><img src="gifs/Match3Demo.gif" alt="" /></a>
-											<br class=”blank” />
+											<br clear="all" />
 											<p>A 2D puzzle game inspired by Puzzle & Dragon's Match 3 mechanics. The goal is to clear as many dots as you can.</p>
 										</article>
 										<article>
 											<h4>Shoot and Clear</h4>
 											<a href="https://simmer.io/@demastte/clear-and-shoot" class="image"><img src="gifs/ChronoSlash.gif" alt="" /></a>
-											<br class=”blank” />
+											<br clear="all" />
 											<p>A 2D action-survival platformer where your goal is to earn points by collecting gems that are dropped by defeated enemies.</p>
 										</article>
 										<article>
 											<h4>Graybox Rush</h4>
 											<a href="https://simmer.io/@demastte/graybox-rush" class="image"><img src="gifs/EndlessRunner.gif" alt="" /></a>
-											<br class=”blank” />
+											<br clear="all" />
 											<p>A 2D endless runner where you collect coins to earn points and aim for a high score.</p>
 										</article>
 									</div>
