--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 						<li><a href="#Breakdowns">Game Teardowns</a></li>
 						<li><a href="#Prototypes">Game Prototypes</a></li>
 						<li><a href="#Spreadsheets">Game Spreadsheets</a></li>
-						<li><a href="#Jobs">Jobs</a></li>
+						<li><a href="#Past Jobs">Past Jobs</a></li>
 					</ul>
 				</nav>
 				<footer>
@@ -93,17 +93,20 @@
 											<h4>All-Clear</h4>
 											<a href="https://simmer.io/@demastte/all-clear" class="image"><img src="gifs/Match3Demo.gif" alt="" /></a>
 											<br clear="all" />
+											<br clear="all" />
 											<p>A 2D puzzle game inspired by Puzzle & Dragon's Match 3 mechanics. The goal is to clear as many dots as you can.</p>
 										</article>
 										<article>
 											<h4>Shoot and Clear</h4>
 											<a href="https://simmer.io/@demastte/clear-and-shoot" class="image"><img src="gifs/ChronoSlash.gif" alt="" /></a>
 											<br clear="all" />
+											<br clear="all" />
 											<p>A 2D action-survival platformer where your goal is to earn points by collecting gems that are dropped by defeated enemies.</p>
 										</article>
 										<article>
 											<h4>Graybox Rush</h4>
 											<a href="https://simmer.io/@demastte/graybox-rush" class="image"><img src="gifs/EndlessRunner.gif" alt="" /></a>
+											<br clear="all" />
 											<br clear="all" />
 											<p>A 2D endless runner where you collect coins to earn points and aim for a high score.</p>
 										</article>
@@ -127,10 +130,10 @@
 								</div>
 							</section>
 
-						<!-- Jobs -->
-							<section id="Jobs">
+						<!-- Past Jobs -->
+							<section id="Past Jobs">
 								<div class="container">
-									<h3>Jobs</h3>
+									<h3>Past Jobs</h3>
 									<div class="features">
 										<article>
 											<a href="https://netease-na.com/" type="image/png" class="image"><img src="images/NetEase.png" alt="" /></a>
