--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 				</header>
 				<nav id="nav">
 					<ul>
-						<li><a href="#Me" class="active">Me</a></li>
+						<li><a href="#About Me" class="active">About Me</a></li>
 						<li><a href="#Breakdowns">Game Teardowns</a></li>
 						<li><a href="#Prototypes">Game Prototypes</a></li>
 						<li><a href="#Spreadsheets">Game Spreadsheets</a></li>
