--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 					<div id="main">
 
 						<!-- Me -->
-							<section id="Me">
+							<section id="About Me">
 								<div class="image main" data-position="center">
 									<img src="images/my_imgs/Hallway_Resize.png" alt="" />
 								</div>
