--- a/index.html
+++ b/index.html
@@ -120,6 +120,13 @@
 									<h3>Game Spreadsheets</h3>
 									<div class="features">
 										<article>
+											<a href="documents/Cookie_Jam_Blast.pdf" type="application/pdf" class="image"><img src="crafting_simulator/images/Crafting.png" alt="" /></a>
+											<div class="inner">
+												<h4>Cookie Jam Blast Teardown</h4>
+												<p>Learnings from a Match 3 game</p>
+											</div>
+										</article>
+										<article>
 											<a href="https://github.com/tedglim/gaming_spreadsheets" class="image"><img src="images/GitHub_Logo.png" alt="" /></a>
 											<div class="inner">
 												<h4>Spreadsheet Repository</h4>
