file hierarchy change

--- a/index.html
+++ b/index.html
@@ -60,21 +60,21 @@
 									<p>These are product teardowns of various mobile games highlighting their strengths and weaknesses.</p>
 									<div class="features">
 										<article>
-											<a href="documents/Cookie_Jam_Blast.pdf" type="application/pdf" class="image"><img src="images/Cookie_Jam_Blast.png" alt="" /></a>
+											<a href="documents/Cookie_Jam_Blast.pdf" type="application/pdf" class="image"><img src="images/cpyrght_imgs/Cookie_Jam_Blast.png" alt="" /></a>
 											<div class="inner">
 												<h4>Cookie Jam Blast Teardown</h4>
 												<p>Learnings from a Match 3 game</p>
 											</div>
 										</article>
 										<article>
-											<a href="documents/Langrisser.pdf" type="application/pdf" class="image"><img src="images/Langrisser.png" alt="" /></a>
+											<a href="documents/Langrisser.pdf" type="application/pdf" class="image"><img src="images/cpyrght_imgs/Langrisser.png" alt="" /></a>
 											<div class="inner">
 												<h4>Langrisser Mobile Teardown</h4>
 												<p>A deep-dive into a mobile tactics RPG game.</p>
 											</div>
 										</article>
 										<article>
-											<a href="documents/Golf_Clash.pdf" type="application/pdf" class="image"><img src="images/Golf_Clash.png" alt="" /></a>
+											<a href="documents/Golf_Clash.pdf" type="application/pdf" class="image"><img src="images/cpyrght_imgs/Golf_Clash.png" alt="" /></a>
 											<div class="inner">
 												<h4>Golf Clash Teardown</h4>
 												<p>Looking at how Golf Clash adopts the Clash Royale F2P model to meet its own needs.</p>
@@ -120,7 +120,7 @@
 									<h3>Game Spreadsheets</h3>
 									<div class="features">
 										<article>
-											<a href="documents/Cookie_Jam_Blast.pdf" type="application/pdf" class="image"><img src="images/Crafting.png" alt="" /></a>
+											<a href="https://github.com/tedglim/gaming_spreadsheets" class="image"><img src="images/Crafting.png" alt="" /></a>
 											<div class="inner">
 												<h4>Cookie Jam Blast Teardown</h4>
 												<p>Learnings from a Match 3 game</p>
@@ -143,14 +143,14 @@
 									<h3>Past Jobs</h3>
 									<div class="features">
 										<article>
-											<a href="https://netease-na.com/" type="image/png" class="image"><img src="images/NetEase.png" alt="" /></a>
+											<a href="https://netease-na.com/" type="image/png" class="image"><img src="images/cpyrght_imgs/NetEase.png" alt="" /></a>
 											<div class="inner">
 												<h4>Associate Game Designer</h4>
 												<p>I created a game economy system, designed retention mechanics and drafted level concepts for new game modes.</p>
 											</div>
 										</article>
 										<article>
-											<a href="https://www.acmeticketing.com/" class="image"><img src="images/ACME.png" alt="" /></a>
+											<a href="https://www.acmeticketing.com/" class="image"><img src="images/cpyrght_imgs/ACME.png" alt="" /></a>
 											<div class="inner">
 												<h4>Software Engineer Intern</h4>
 												<p>I created purchase flows for the Vantiv Element payment processor, built a PCI-compliant manual credit card entry payment and developed a productive in-house command line tool.</p>
