--- a/index.html
+++ b/index.html
@@ -120,14 +120,36 @@
 									<h3>Game Spreadsheets</h3>
 									<div class="features">
 										<article>
-											<a href="https://github.com/tedglim/gaming_spreadsheets" class="image"><img src="images/Crafting.png" alt="" /></a>
+											<a href="https://github.com/tedglim/gaming_spreadsheets" class="image"><img src="images/my_imgs/fe3h_stats_calc.png" alt="" /></a>
 											<div class="inner">
-												<h4>Cookie Jam Blast Teardown</h4>
+												<h4>Character Stats Calculator</h4>
+												<p>Learnings from a Match 3 game</p>
+											</div>
+										</article>										
+										<article>
+											<a href="https://github.com/tedglim/gaming_spreadsheets" class="image"><img src="images/my_imgs/Crafting.png" alt="" /></a>
+											<div class="inner">
+												<h4>Crafting Simulator</h4>
 												<p>Learnings from a Match 3 game</p>
 											</div>
 										</article>
 										<article>
-											<a href="https://github.com/tedglim/gaming_spreadsheets" class="image"><img src="images/GitHub_Logo.png" alt="" /></a>
+										<article>
+											<a href="https://github.com/tedglim/gaming_spreadsheets" class="image"><img src="images/my_imgs/Monetization.png" alt="" /></a>
+											<div class="inner">
+												<h4>Monetization</h4>
+												<p>Learnings from a Match 3 game</p>
+											</div>
+										</article>
+										<article>
+											<a href="https://github.com/tedglim/gaming_spreadsheets" class="image"><img src="images/my_imgs/tcg_deck_optimizer.png" alt="" /></a>
+											<div class="inner">
+												<h4>Deck Optimizer</h4>
+												<p>Learnings from a Match 3 game</p>
+											</div>
+										</article>
+										<article>
+											<a href="https://github.com/tedglim/gaming_spreadsheets" class="image"><img src="images/cpyright_imgs/GitHub_Logo.png" alt="" /></a>
 											<div class="inner">
 												<h4>Spreadsheet Repository</h4>
 												<p>A collection of spreadsheets that outline a variety of foundational game systems.</p>
