Update website formatting 01

--- a/index.html
+++ b/index.html
@@ -18,9 +18,9 @@
 				<nav id="nav">
 					<ul>
 						<li><a href="#About Me" class="active">About Me</a></li>
-						<li><a href="#Breakdowns">Game Teardowns</a></li>
+						<li><a href="#Spreadsheets">Game Spreadsheets</a></li>						
 						<li><a href="#Prototypes">Game Prototypes</a></li>
-						<li><a href="#Spreadsheets">Game Spreadsheets</a></li>
+						<li><a href="#Breakdowns">Game Teardowns</a></li>
 						<li><a href="#Past Jobs">Past Jobs</a></li>
 					</ul>
 				</nav>
@@ -53,31 +53,45 @@
 								</div>
 							</section>
 
-						<!-- Breakdowns -->
-							<section id="Breakdowns">
+						<!-- Spreadsheets -->
+							<section id="Spreadsheets">
 								<div class="container">
-									<h3>Game Teardowns</h3>
-									<p>These are product teardowns of various mobile games highlighting their strengths and weaknesses.</p>
+									<h3>Game Spreadsheets</h3>
+									<p>This is a collection of spreadsheets that outline a variety of foundational game systems.</p>
 									<div class="features">
 										<article>
-											<a href="documents/Cookie_Jam_Blast.pdf" type="application/pdf" class="image"><img src="images/cpyrght_imgs/Cookie_Jam_Blast.png" alt="" /></a>
+											<a href="https://docs.google.com/spreadsheets/d/1sMylSOR8Ou7Bt2CuHwqTU_AbkVgJDhApMLvmbRUB8cU/edit?usp=sharing" class="image"><img src="images/my_imgs/fe3h_stats_calc.png" alt="" /></a>
 											<div class="inner">
-												<h4>Cookie Jam Blast Teardown</h4>
-												<p>Learnings from a Match 3 game</p>
+												<h4>Character Stats Calculator</h4>
+												<p>Estimates FE3H character stats at a given level based on class and natural stat progression. You can use it <a href="https://docs.google.com/spreadsheets/d/1sMylSOR8Ou7Bt2CuHwqTU_AbkVgJDhApMLvmbRUB8cU/edit?usp=sharing">here</a>.</p>
+											</div>
+										</article>										
+										<article>
+											<a href="https://github.com/tedglim/gaming_spreadsheets/tree/master/spreadsheets/crafting_simulator" class="image"><img src="images/my_imgs/Crafting.png" alt="" /></a>
+											<div class="inner">
+												<h4>Crafting Simulator</h4>
+												<p>Calculates how long it takes to gather enough resources to craft an item via opening loot boxes.</p>
 											</div>
 										</article>
 										<article>
-											<a href="documents/Langrisser.pdf" type="application/pdf" class="image"><img src="images/cpyrght_imgs/Langrisser.png" alt="" /></a>
+											<a href="https://github.com/tedglim/gaming_spreadsheets/tree/master/spreadsheets/monetization" class="image"><img src="images/my_imgs/Monetization.png" alt="" /></a>
 											<div class="inner">
-												<h4>Langrisser Mobile Teardown</h4>
-												<p>A deep-dive into a mobile tactics RPG game.</p>
+												<h4>Monetization</h4>
+												<p>A cursory breakdown of Cookie Jam Blast's pricing of in-app purchases in Excel.</p>
 											</div>
 										</article>
 										<article>
-											<a href="documents/Golf_Clash.pdf" type="application/pdf" class="image"><img src="images/cpyrght_imgs/Golf_Clash.png" alt="" /></a>
+											<a href="https://github.com/tedglim/gaming_spreadsheets/tree/master/spreadsheets/deck_optimizer" class="image"><img src="images/my_imgs/tcg_deck_optimizer.png" alt="" /></a>
 											<div class="inner">
-												<h4>Golf Clash Teardown</h4>
-												<p>Looking at how Golf Clash adopts the Clash Royale F2P model to meet its own needs.</p>
+												<h4>TCG Deck Optimizer</h4>
+												<p>Helps players with card ratio optimization in TCG decks. Calculates the % chance to get certain card combinations in an opening hand. You can use it <a href="https://docs.google.com/spreadsheets/d/1sMylSOR8Ou7Bt2CuHwqTU_AbkVgJDhApMLvmbRUB8cU/edit?usp=sharing">here</a>.</p>
+											</div>
+										</article>
+										<article>
+											<a href="https://github.com/tedglim/gaming_spreadsheets" class="image"><img src="images/cpyright_imgs/GitHub_Logo.png" alt="" /></a>
+											<div class="inner">
+												<h4>Spreadsheet Repository</h4>
+												<p>Additional spreadsheets that outline a variety of foundational game systems.</p>
 											</div>
 										</article>
 									</div>
@@ -88,6 +102,7 @@
 							<section id="Prototypes">
 								<div class="container">
 									<h3>Game Prototypes</h3>
+									<p>A collection of prototypes that I made to practice Unity development and test game ideas.</p>
 									<div class="features">
 										<article>
 											<h4>All-Clear</h4>
@@ -113,46 +128,32 @@
 									</div>
 								</div>
 							</section>
-							
-						<!-- Spreadsheets -->
-							<section id="Spreadsheets">
+
+						<!-- Breakdowns -->
+							<section id="Breakdowns">
 								<div class="container">
-									<h3>Game Spreadsheets</h3>
+									<h3>Game Teardowns</h3>
+									<p>These are product teardowns of various mobile games highlighting their strengths and weaknesses.</p>
 									<div class="features">
 										<article>
-											<a href="https://github.com/tedglim/gaming_spreadsheets" class="image"><img src="images/my_imgs/fe3h_stats_calc.png" alt="" /></a>
+											<a href="documents/Cookie_Jam_Blast.pdf" type="application/pdf" class="image"><img src="images/cpyrght_imgs/Cookie_Jam_Blast.png" alt="" /></a>
 											<div class="inner">
-												<h4>Character Stats Calculator</h4>
-												<p>Learnings from a Match 3 game</p>
-											</div>
-										</article>										
-										<article>
-											<a href="https://github.com/tedglim/gaming_spreadsheets" class="image"><img src="images/my_imgs/Crafting.png" alt="" /></a>
-											<div class="inner">
-												<h4>Crafting Simulator</h4>
+												<h4>Cookie Jam Blast Teardown</h4>
 												<p>Learnings from a Match 3 game</p>
 											</div>
 										</article>
 										<article>
-										<article>
-											<a href="https://github.com/tedglim/gaming_spreadsheets" class="image"><img src="images/my_imgs/Monetization.png" alt="" /></a>
+											<a href="documents/Langrisser.pdf" type="application/pdf" class="image"><img src="images/cpyrght_imgs/Langrisser.png" alt="" /></a>
 											<div class="inner">
-												<h4>Monetization</h4>
-												<p>Learnings from a Match 3 game</p>
+												<h4>Langrisser Mobile Teardown</h4>
+												<p>A deep-dive into a mobile tactics RPG game.</p>
 											</div>
 										</article>
 										<article>
-											<a href="https://github.com/tedglim/gaming_spreadsheets" class="image"><img src="images/my_imgs/tcg_deck_optimizer.png" alt="" /></a>
+											<a href="documents/Golf_Clash.pdf" type="application/pdf" class="image"><img src="images/cpyrght_imgs/Golf_Clash.png" alt="" /></a>
 											<div class="inner">
-												<h4>Deck Optimizer</h4>
-												<p>Learnings from a Match 3 game</p>
-											</div>
-										</article>
-										<article>
-											<a href="https://github.com/tedglim/gaming_spreadsheets" class="image"><img src="images/cpyright_imgs/GitHub_Logo.png" alt="" /></a>
-											<div class="inner">
-												<h4>Spreadsheet Repository</h4>
-												<p>A collection of spreadsheets that outline a variety of foundational game systems.</p>
+												<h4>Golf Clash Teardown</h4>
+												<p>Looking at how Golf Clash adopts the Clash Royale F2P model to meet its own needs.</p>
 											</div>
 										</article>
 									</div>
