--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
 											<a href="https://github.com/tedglim/gaming_spreadsheets/tree/master/spreadsheets/crafting_simulator" class="image"><img src="images/my_imgs/Crafting.png" alt="" /></a>
 											<div class="inner">
 												<h4>Crafting Simulator</h4>
-												<p>Calculates how long it takes to gather enough resources to craft an item via opening loot boxes.</p>
+												<p>Estimates how long it takes to gather enough resources to craft an item via opening loot boxes.</p>
 											</div>
 										</article>
 										<article>
@@ -84,7 +84,7 @@
 											<a href="https://github.com/tedglim/gaming_spreadsheets/tree/master/spreadsheets/deck_optimizer" class="image"><img src="images/my_imgs/tcg_deck_optimizer.png" alt="" /></a>
 											<div class="inner">
 												<h4>TCG Deck Optimizer</h4>
-												<p>Helps players with card ratio optimization in TCG decks. Calculates the % chance to get certain card combinations in an opening hand. You can use it <a href="https://docs.google.com/spreadsheets/d/1s7KA5XF1Q8QzPbOWCb0woiiecfjHbo3MMTEJ6bLkUjg/edit?usp=sharing">here</a>.</p>
+												<p>Helps players with card ratio optimization in TCG decks. Calculates the % chance to get certain cards in an opening hand. You can use it <a href="https://docs.google.com/spreadsheets/d/1s7KA5XF1Q8QzPbOWCb0woiiecfjHbo3MMTEJ6bLkUjg/edit?usp=sharing">here</a>.</p>
 											</div>
 										</article>
 										<article>
@@ -153,7 +153,7 @@
 											<a href="documents/Golf_Clash.pdf" type="application/pdf" class="image"><img src="images/cpyrght_imgs/Golf_Clash.png" alt="" /></a>
 											<div class="inner">
 												<h4>Golf Clash Teardown</h4>
-												<p>Looking at how Golf Clash adopts the Clash Royale F2P model to meet its own needs.</p>
+												<p>Looks at how Golf Clash adopts the Clash Royale F2P model to meet its own needs.</p>
 											</div>
 										</article>
 									</div>
