--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 						<li><a href="#Spreadsheets">Game Spreadsheets</a></li>						
 						<li><a href="#Prototypes">Game Prototypes</a></li>
 						<li><a href="#Breakdowns">Game Teardowns</a></li>
-						<li><a href="#Past Jobs">Past Jobs</a></li>
+						<li><a href="#Jobs">Past Jobs</a></li>
 					</ul>
 				</nav>
 				<footer>
@@ -161,9 +161,10 @@
 							</section>
 
 						<!-- Past Jobs -->
-							<section id="Past Jobs">
+							<section id="Jobs">
 								<div class="container">
 									<h3>Past Jobs</h3>
+									<p>These were my roles at previous companies.</p>
 									<div class="features">
 										<article>
 											<a href="https://netease-na.com/" type="image/png" class="image"><img src="images/cpyrght_imgs/NetEase.png" alt="" /></a>
