--- a/index.html
+++ b/index.html
@@ -80,10 +80,10 @@
 											</div>
 										</article>
 										<article>
-											<a href="https://github.com/tedglim/gaming_spreadsheets/tree/master/spreadsheets/deck_optimizer" class="image"><img src="images/my_imgs/tcg_deck_optimizer.png" alt="" /></a>
+											<a href="https://github.com/tedglim/gaming_spreadsheets/tree/master/spreadsheets/progression" class="image"><img src="images/my_imgs/Progression.png" alt="" /></a>
 											<div class="inner">
-												<h4>TCG Deck Optimizer</h4>
-												<p>Helps players with card ratio optimization in TCG decks. Calculates the % chance to get certain cards in an opening hand. You can use it <a href="https://docs.google.com/spreadsheets/d/1s7KA5XF1Q8QzPbOWCb0woiiecfjHbo3MMTEJ6bLkUjg/edit?usp=sharing">here</a>.</p>
+												<h4>Progression</h4>
+												<p>Showcases an adjustable level progression curve for a mock strategy game with the accompanying rewards per level.</p>
 											</div>
 										</article>
 										<article>
