--- a/index.html
+++ b/index.html
@@ -18,9 +18,10 @@
 				<nav id="nav">
 					<ul>
 						<li><a href="#About Me" class="active">About Me</a></li>
-						<li><a href="#Spreadsheets">Game Spreadsheets</a></li>						
+						<li><a href="#Spreadsheets">Game Spreadsheets</a></li>
+						<li><a href="#Breakdowns">Game Analyses</a></li>						
 						<li><a href="#Prototypes">Game Prototypes</a></li>
-						<li><a href="#Breakdowns">Game Teardowns</a></li>
+
 						<li><a href="#Jobs">Past Jobs</a></li>
 					</ul>
 				</nav>
@@ -96,7 +97,49 @@
 									</div>
 								</div>
 							</section>
-
+						<!-- Breakdowns -->
+							<section id="Breakdowns">
+								<div class="container">
+									<h3>Game Analyses</h3>
+									<div class="features">
+										<article>
+											<a href="https://github.com/tedglim/data_apps/tree/master/src/data_exploration" class="image"><img src="images/my_imgs/PokemonCharts.png" alt="" /></a>
+											<div class="inner">
+												<h4>Pokemon Data Exploration</h4>
+												<p>An exploration of Pokemon data to discover meaningful trends.</p>
+											</div>
+										</article>
+										<article>
+											<a href="https://github.com/tedglim/data_apps/tree/master/src/ticket_to_ride" class="image"><img src="images/my_imgs/TTRECharts.png" alt="" /></a>
+											<div class="inner">
+												<h4>Ticket To Ride Europe Analysis</h4>
+												<p>An elementary analysis of Ticket to Ride Europe to discover the efficient ways to earn points with train cards.</p>
+											</div>
+										</article>
+										<article>
+											<a href="documents/Cookie_Jam_Blast.pdf" type="application/pdf" class="image"><img src="images/cpyrght_imgs/Cookie_Jam_Blast.png" alt="" /></a>
+											<div class="inner">
+												<h4>Cookie Jam Blast Teardown</h4>
+												<p>Learnings from a Match 3 game</p>
+											</div>
+										</article>
+										<article>
+											<a href="documents/Langrisser.pdf" type="application/pdf" class="image"><img src="images/cpyrght_imgs/Langrisser.png" alt="" /></a>
+											<div class="inner">
+												<h4>Langrisser Mobile Teardown</h4>
+												<p>A deep-dive into a mobile tactics RPG game.</p>
+											</div>
+										</article>
+										<article>
+											<a href="documents/Golf_Clash.pdf" type="application/pdf" class="image"><img src="images/cpyrght_imgs/Golf_Clash.png" alt="" /></a>
+											<div class="inner">
+												<h4>Golf Clash Teardown</h4>
+												<p>Looks at how Golf Clash adopts the Clash Royale F2P model to meet its own needs.</p>
+											</div>
+										</article>
+									</div>
+								</div>
+							</section>
 						<!-- Prototypes -->
 							<section id="Prototypes">
 								<div class="container">
@@ -122,36 +165,6 @@
 											<br clear="all" />
 											<br clear="all" />
 											<p>A 2D endless runner where you collect coins to earn points and aim for a high score. <a href="https://simmer.io/@demastte/graybox-rush">Click here to play!</a></p>
-										</article>
-									</div>
-								</div>
-							</section>
-
-						<!-- Breakdowns -->
-							<section id="Breakdowns">
-								<div class="container">
-									<h3>Game Teardowns</h3>
-									<div class="features">
-										<article>
-											<a href="documents/Cookie_Jam_Blast.pdf" type="application/pdf" class="image"><img src="images/cpyrght_imgs/Cookie_Jam_Blast.png" alt="" /></a>
-											<div class="inner">
-												<h4>Cookie Jam Blast Teardown</h4>
-												<p>Learnings from a Match 3 game</p>
-											</div>
-										</article>
-										<article>
-											<a href="documents/Langrisser.pdf" type="application/pdf" class="image"><img src="images/cpyrght_imgs/Langrisser.png" alt="" /></a>
-											<div class="inner">
-												<h4>Langrisser Mobile Teardown</h4>
-												<p>A deep-dive into a mobile tactics RPG game.</p>
-											</div>
-										</article>
-										<article>
-											<a href="documents/Golf_Clash.pdf" type="application/pdf" class="image"><img src="images/cpyrght_imgs/Golf_Clash.png" alt="" /></a>
-											<div class="inner">
-												<h4>Golf Clash Teardown</h4>
-												<p>Looks at how Golf Clash adopts the Clash Royale F2P model to meet its own needs.</p>
-											</div>
 										</article>
 									</div>
 								</div>
