fixed small typoes
fixed small typoes

--- a/index.html
+++ b/index.html
@@ -106,14 +106,14 @@
 											<a href="https://github.com/tedglim/data_apps/tree/master/src/data_exploration" class="image"><img src="images/my_imgs/PokemonCharts.png" alt="" /></a>
 											<div class="inner">
 												<h4>Pokemon Data Exploration</h4>
-												<p>An exploration of Pokemon data to discover meaningful trends.</p>
+												<p>An exploration of Pokemon data to discover meaningful trends among Pokemon.</p>
 											</div>
 										</article>
 										<article>
 											<a href="https://github.com/tedglim/data_apps/tree/master/src/ticket_to_ride" class="image"><img src="images/my_imgs/TTRECharts.png" alt="" /></a>
 											<div class="inner">
 												<h4>Ticket To Ride Europe Analysis</h4>
-												<p>An elementary analysis of Ticket to Ride Europe to discover the efficient ways to earn points with train cards.</p>
+												<p>An elementary analysis of Ticket to Ride Europe to discover efficient ways to earn points with train cards.</p>
 											</div>
 										</article>
 										<article>
