--- a/index.html
+++ b/index.html
@@ -21,8 +21,7 @@
 						<li><a href="#Spreadsheets">Game Spreadsheets</a></li>
 						<li><a href="#Breakdowns">Game Analyses</a></li>						
 						<li><a href="#Prototypes">Game Prototypes</a></li>
-
-						<li><a href="#Jobs">Past Jobs</a></li>
+						<li><a href="#Projects">More Projects</a></li>
 					</ul>
 				</nav>
 				<footer>
@@ -87,13 +86,6 @@
 												<p>Showcases an adjustable level progression curve for a mock strategy game with the accompanying rewards per level.</p>
 											</div>
 										</article>
-										<article>
-											<a href="https://github.com/tedglim/gaming_spreadsheets" class="image"><img src="images/cpyrght_imgs/GitHub_Logo.png" alt="" /></a>
-											<div class="inner">
-												<h4>Spreadsheet Repository</h4>
-												<p>Additional spreadsheets that outline a variety of foundational game systems.</p>
-											</div>
-										</article>
 									</div>
 								</div>
 							</section>
@@ -107,13 +99,6 @@
 											<div class="inner">
 												<h4>Pokemon Data Exploration</h4>
 												<p>An exploration of Pokemon data to discover meaningful trends among Pokemon.</p>
-											</div>
-										</article>
-										<article>
-											<a href="https://github.com/tedglim/data_apps/tree/master/src/ticket_to_ride" class="image"><img src="images/my_imgs/TTRECharts.png" alt="" /></a>
-											<div class="inner">
-												<h4>Ticket To Ride Europe Analysis</h4>
-												<p>An elementary analysis of Ticket to Ride Europe to discover efficient ways to earn points with train cards.</p>
 											</div>
 										</article>
 										<article>
@@ -169,24 +154,15 @@
 									</div>
 								</div>
 							</section>
-
-						<!-- Past Jobs -->
-							<section id="Jobs">
+						<!-- More Projects -->
+							<section id="Projects">
 								<div class="container">
-									<h3>Past Jobs</h3>
+									<h3>More Projects</h3>
 									<div class="features">
 										<article>
-											<a href="https://netease-na.com/" type="image/png" class="image"><img src="images/cpyrght_imgs/NetEase.png" alt="" /></a>
+											<a href="https://github.com/tedglim" class="image"><img src="images/cpyrght_imgs/GitHub_Logo.png" alt="" /></a>
 											<div class="inner">
-												<h4>Associate Game Designer</h4>
-												<p>I created a game economy system, designed retention mechanics and drafted level concepts for new game modes.</p>
-											</div>
-										</article>
-										<article>
-											<a href="https://www.acmeticketing.com/" class="image"><img src="images/cpyrght_imgs/ACME.png" alt="" /></a>
-											<div class="inner">
-												<h4>Software Engineer Intern</h4>
-												<p>I created purchase flows for the Vantiv Element payment processor, built a PCI-compliant manual credit card entry payment and developed a productive in-house command line tool.</p>
+												<p>Additional projects that I've worked on or are currently in-progress.</p>
 											</div>
 										</article>
 									</div>
